# geollm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  examples.md  pyproject.toml  release-please-config.json  repl.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  pr-title.yml  publish.yml  test-demo.yml
demo/: .env.example  Dockerfile  docker-compose.yml  main.py  mcp_server.py
demo/etter-mcp-app/: Dockerfile  README.md  docker-compose.yml  mcp-app.html  package-lock.json  package.json  server.ts
demo/etter-mcp-app/src/: mcp-app.ts
demo/geollm-mcp-app/: .env.example  Dockerfile  README.md  docker-compose.yml  mcp_server.py  package-lock.json  package.json  server.ts
demo/static/: index.html
docs/: package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts
docs/guide/: datasources.md  getting-started.md  spatial-relations.md
etter/: __init__.py  examples.py  exceptions.py  geometry_format.py  models.py  parser.py  prompts.py  spatial.py  spatial_config.py  validators.py
etter/datasources/: __init__.py  composite.py  ign_bdcarto.py  location_types.py  postgis.py  protocol.py  swissnames3d.py
geollm/: examples.py  models.py  parser.py  prompts.py  spatial.py  spatial_config.py  validators.py
geollm-mcp-app/: README.md  mcp-app.html  mcp_server.py  package-lock.json  server.ts  vite.config.ts
geollm-mcp-app/src/: mcp-app.ts
geollm/datasources/: __init__.py  composite.py  ign_bdcarto.py  ign_bdtopo.py  location_types.py  swissnames3d.py
scripts/: extract_bdcarto.sh  load_data_postgis.py
tests/: conftest.py  smoke_check.py  test_context_aware_distances.py  test_contextual_distances.py  test_geometry_format.py  test_ign_bdcarto.py  test_models.py  test_parser_streaming.py  test_postgis_datasource.py  test_prompts.py  test_spatial.py  test_spatial_config.py  test_swissnames3d.py  test_type_map_typing.py  test_validators.py
tests/fixtures/: ign_bdcarto_sample.json
