[project]
name = "etter"
version = "0.1.0"
description = "Natural language geographic query parsing using LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "etter contributors"}
]
license = {text = "BSD-3-Clause"}
dependencies = [
    "langchain>=1.2",
    "pydantic>=2.12",
    "shapely>=2.1",
    "pyproj>=3.7",
    "geopandas>=1.1",
    "rapidfuzz>=3.14",
]

[project.optional-dependencies]
postgis = [
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.15",
]
dev = [
    "langchain-openai>=1.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.0",
    "ruff>=0.15",
    "ty>=0.0.31",
    "pdoc>=14.0",
    "fastapi>=0.135",
    "python-dotenv>=1.2",
    "uvicorn>=0.44.0",
    "mcp[cli]>=1.27.0",
    "rich>=15.0.0",
    # PostGIS integration tests
    "testcontainers[postgres]>=4.14.2",
    "psycopg2-binary>=2.9",
    "etter[postgis]",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["F", "I", "E", "W", "UP", "C4", "ARG"]
ignore = ["E501"]

[tool.setuptools]
packages = { find = { where = ["."], include = ["etter*"] } }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.semantic_release]
version_toml = []
build_command = "uv version $NEW_VERSION && uv build"
commit_parser = "conventional"
allow_zero_version = true
commit_message = "chore(release): {version}"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
ignore_merge_commits = true

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\(deps\): .+''',
    '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

